# giraffe

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  configure  configure.ac
autom4te.cache/: output.0  traces.0
data/levels/demo/: areas.dat~
data/levels/demo/areas/: demo.area  demo.area~
data/sprites/: README  sprites.dat~
data/sprites/baddie/: sprite
data/sprites/baddie/idle/: anim  anim~
data/sprites/bullet/: sprite
data/sprites/bullet/fuh/: anim
data/sprites/player/: sprite  sprite~
data/sprites/player/idle/: anim
data/sprites/player/walk_left/: anim~
data/sprites/player/walk_right/: anim  anim~
data/tilesets/: tilesets.dat~
data/tilesets/grass/: tileset.dat~
data/tilesets/grass/block1/: anim  anim~
data/tilesets/grass/square-grass-2x1/: anim
doc/: giraffe.txt
src/: Makefile  Makefile.am  Makefile.in  animation.c  animation.h  audio.c  audio.h  camera.c  camera.h  collision.c  collision.h  defs.h  dynarray.c  dynarray.h  file.c  file.h  giraffe  graphics.c  graphics.h  input.c  input.h  main.c  map.c  map.h  object.c  object.h  signal.c  signal.h  timer.c  timer.h
src/.deps/: animation.Po  audio.Po  baddie.Po  bullet.Po  camera.Po  collision.Po  dynarray.Po  file.Po  graphics.Po  input.Po  main.Po  map.Po  none.Po  object.Po  objtypes.Po  player.Po  signal.Po  tiletypes.Po  timer.Po
src/types/: objtypes.c  objtypes.h  tiletypes.c  tiletypes.h
src/types/objects/: baddie.c  baddie.c~  bullet.c  bullet.c~  player.c  player.c~
src/types/tiles/: none.c
