bin_PROGRAMS = giraffe
giraffe_SOURCES = main.c defs.h file.c file.h audio.c audio.h dynarray.c dynarray.h map.c map.h animation.c animation.h graphics.c graphics.h camera.c camera.h timer.c timer.h object.c object.h collision.c collision.h signal.c signal.h input.c input.h types/objtypes.c types/objtypes.h types/tiletypes.c types/tiletypes.h types/objects/player.c types/objects/baddie.c types/objects/bullet.c types/tiles/none.c



